# prefab-merge-tool

./: .gitignore  README.md  pyproject.toml  unityflow-batch-resolution-proposal.md  unityflow-improvement-proposal.md  unityflow-issue-draft.md  unityflow-llm-friendly-proposal.md  unityflow-negative-fileid-bug.md  unityflow-nested-prefab-caching-proposal.md  unityflow-proposal-child-ordering.md  unityflow-proposal-effective-property.md  unityflow-remaining-work.md  unityflow-semantic-merge-proposal.md
sample/: icon_slot_item.prefab.sample
scripts/: install-git-tools.sh  install-p4-tools.sh
src/prefab_diff_tool/: __init__.py  __main__.py  app.py
src/prefab_diff_tool/core/: __init__.py  loader.py  unity_model.py  writer.py
src/prefab_diff_tool/models/: __init__.py  tree_model.py
src/prefab_diff_tool/resources/styles/: dark.qss
src/prefab_diff_tool/utils/: __init__.py  cache.py  colors.py  guid_resolver.py  log_handler.py  naming.py  vcs_detector.py
src/prefab_diff_tool/widgets/: __init__.py  diff_view.py  inspector_widget.py  loading_widget.py  log_viewer.py  main_window.py  merge_view.py
tests/: test_dict_comparison.py  test_diff_logic.py  test_loader.py  test_merge_conflict.py  test_merge_logic_detailed.py  test_real_scenario.py  test_unity_model.py  test_unityflow_semantic.py  test_writer.py
